[gd_scene load_steps=24 format=3 uid="uid://dwpqdm50ftu1j"]

[ext_resource type="Script" path="res://enemies/enemy.gd" id="1_ii8wy"]
[ext_resource type="Script" path="res://droppables/item.gd" id="2_3tvbs"]
[ext_resource type="Resource" uid="uid://dqc5plt052as2" path="res://droppables/mp-40.tres" id="3_i2sxh"]
[ext_resource type="Texture2D" uid="uid://3mtbs4xbjh1a" path="res://art/first_aid.png" id="3_t5iu1"]
[ext_resource type="Resource" uid="uid://cy0eadxal8imn" path="res://droppables/mauser.tres" id="4_vnoff"]
[ext_resource type="PackedScene" uid="uid://r0kotk8c7hjf" path="res://AI/movement.tscn" id="5_vavk2"]
[ext_resource type="Texture2D" uid="uid://jhhowcjgku4j" path="res://art/marko.png" id="7_a4jvi"]
[ext_resource type="AudioStream" uid="uid://dvyu5sdj3b74n" path="res://art/scream.mp3" id="8_f43mc"]
[ext_resource type="PackedScene" uid="uid://cbdpa8nwvq3rk" path="res://enemies/vision.tscn" id="9_mt60k"]
[ext_resource type="PackedScene" uid="uid://bqrp0uplcicmw" path="res://guns/gun.tscn" id="10_ds0ea"]
[ext_resource type="PackedScene" uid="uid://nb4y328svfk2" path="res://enemies/statemachine/statemachine.tscn" id="11_nac6r"]
[ext_resource type="Script" path="res://enemies/statemachine/statemachine.gd" id="13_ywhos"]

[sub_resource type="Resource" id="Resource_salpt"]
resource_local_to_scene = true
script = ExtResource("2_3tvbs")
name = "Health"
texture = ExtResource("3_t5iu1")
maxTextureSize = Vector2(20, 20)
drop_weight = 5.0
scene_path = "res://droppables/health.tscn"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nguij"]
size = Vector2(23, 43)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_w5fy1"]
size = Vector2(11, 26)

[sub_resource type="Animation" id="Animation_gsknv"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("walk:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("death:frame_coords")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}

[sub_resource type="Animation" id="Animation_um28d"]
resource_name = "death"
length = 1.2
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("death:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 4), Vector2i(1, 4), Vector2i(2, 4), Vector2i(0, 5), Vector2i(1, 5)]
}

[sub_resource type="Animation" id="Animation_jh06j"]
resource_name = "walkdown"
length = 0.6
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("walk:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [Vector2i(0, 0), Vector2i(1, 0), Vector2i(2, 0)]
}

[sub_resource type="Animation" id="Animation_a8fsh"]
resource_name = "walkleft"
length = 0.6
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("walk:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [Vector2i(0, 1), Vector2i(1, 1), Vector2i(2, 1)]
}

[sub_resource type="Animation" id="Animation_qdx6f"]
resource_name = "walkright"
length = 0.6
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("walk:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [Vector2i(0, 2), Vector2i(1, 2), Vector2i(2, 2)]
}

[sub_resource type="Animation" id="Animation_jpepv"]
resource_name = "walkup"
length = 0.6
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("walk:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [Vector2i(0, 3), Vector2i(1, 3), Vector2i(2, 3)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wn5g1"]
_data = {
"RESET": SubResource("Animation_gsknv"),
"death": SubResource("Animation_um28d"),
"walkdown": SubResource("Animation_jh06j"),
"walkleft": SubResource("Animation_a8fsh"),
"walkright": SubResource("Animation_qdx6f"),
"walkup": SubResource("Animation_jpepv")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ywqus"]
size = Vector2(27, 42)

[node name="enemy" type="CharacterBody2D" groups=["game_events"]]
texture_filter = 1
position = Vector2(-1, 0)
collision_layer = 17
collision_mask = 19
motion_mode = 1
wall_min_slide_angle = 0.0
script = ExtResource("1_ii8wy")
drop_table = Array[ExtResource("2_3tvbs")]([SubResource("Resource_salpt"), ExtResource("3_i2sxh"), ExtResource("4_vnoff")])
gun_table = Array[ExtResource("2_3tvbs")]([ExtResource("4_vnoff"), ExtResource("3_i2sxh")])

[node name="Movement" parent="." instance=ExtResource("5_vavk2")]

[node name="hurtbox" type="CollisionShape2D" parent="."]
position = Vector2(-1, -14)
shape = SubResource("RectangleShape2D_nguij")
one_way_collision_margin = 0.0

[node name="healthbar" type="ProgressBar" parent="."]
modulate = Color(0, 1, 0, 1)
light_mask = 0
visibility_layer = 7
z_index = 3
z_as_relative = false
y_sort_enabled = true
custom_minimum_size = Vector2(15, 10)
layout_direction = 2
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -7.0
offset_top = -34.0
offset_right = 8.0
offset_bottom = -7.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.957861, 0.0874722)
size_flags_horizontal = 4
step = 10.0
value = 100.0
allow_greater = true
allow_lesser = true
show_percentage = false
metadata/_edit_use_anchors_ = true

[node name="walk" type="Sprite2D" parent="."]
position = Vector2(0, -16)
scale = Vector2(0.5, 0.5)
texture = ExtResource("7_a4jvi")
hframes = 3
vframes = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
unique_name_in_owner = true
y_sort_enabled = true
position = Vector2(-0.5, -14.5)
shape = SubResource("RectangleShape2D_w5fy1")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_wn5g1")
}

[node name="death" type="Sprite2D" parent="."]
visible = false
position = Vector2(0, -11)
scale = Vector2(0.5, 0.5)
texture = ExtResource("7_a4jvi")
hframes = 3
vframes = 6

[node name="Timer" type="Timer" parent="."]
wait_time = 0.2
autostart = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_f43mc")

[node name="hitbox" type="Area2D" parent="."]
collision_layer = 9

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox"]
position = Vector2(0, -14)
shape = SubResource("RectangleShape2D_ywqus")

[node name="vision" parent="." instance=ExtResource("9_mt60k")]
position = Vector2(1, -19)

[node name="gun" parent="." instance=ExtResource("10_ds0ea")]
position = Vector2(1, -15)

[node name="Statemachine" parent="." instance=ExtResource("11_nac6r")]
script = ExtResource("13_ywhos")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="area_entered" from="hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="is_visible" from="vision" to="." method="_on_vision_is_visible"]
